add_library(database async_database_impl.cpp ../include/async_database.hpp ../include/boost_asio_beast.hpp db_impl_base.hpp db_impl.hpp db_impl.cpp database_impl.cpp async_database_impl.hpp database_impl.hpp)
add_dependencies(database proto)
target_include_directories(database PRIVATE . ${JSONCPP_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
target_link_libraries(database ${Protobuf_LIBRARIES} ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} ${JSONCPP_LIBRARIES} pthread)
#if (NOT OMIT_LIBRARY)
#    add_subdirectory(test)
#endif(NOT OMIT_LIBRARY)